--- a/Runtime/TinyBitTurtle.Gems.asmdef
+++ b/Runtime/TinyBitTurtle.Gems.asmdef
@@ -1,6 +1,8 @@
 {
     "name": "TinyBitTurtle.Gems",
-    "references": [],
+    "references": [
+        "GUID:8bda0a8fd8767fd4a98c45a024624c65"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
