--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "unity": "2019.4",
   "description": "tinyBitTurtle gems package",
   "dependencies": {
-    "com.tinybitturtle.core": "https://github.com/TinyBitTurtle/TinyBitTurtleCore.git"
+    "com.tinybitturtle.core": "1.0.0"
   },
   "author": {
     "name": "TinyBit Turtle",
